src/objects/Staff__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Office_Name__c</referenceTo>
        <relationshipLabel>Staff</relationshipLabel>
        <relationshipName>Staff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Loan Officer</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Staff</label>
    <nameField>
        <label>Nick Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IE00000000EA1MAM_00NE0000000qKXcMAM</fullName>
        <active>true</active>
        <field>Group__c.Source_Loan_Officer__c</field>
        <filterItems>
            <field>Staff__c.Branch__c</field>
            <operation>equals</operation>
            <valueField>$Source.Office__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Group_Source Loan Officer</name>
        <sourceObject>Group__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000EA1MAM_00NE0000000qKXhMAM</fullName>
        <active>true</active>
        <field>Group__c.Current_Loan_Officer__c</field>
        <filterItems>
            <field>$Source.Office__c</field>
            <operation>equals</operation>
            <valueField>Staff__c.Branch__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Group_Current Loan Officer</name>
        <sourceObject>Group__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000EAGMA2_00NE0000000qKXwMAM</fullName>
        <active>true</active>
        <field>Client__c.Source_Loan_Officer__c</field>
        <filterItems>
            <field>Staff__c.Branch__c</field>
            <operation>equals</operation>
            <valueField>$Source.Office__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Client_Source Loan Officer</name>
        <sourceObject>Client__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000EAGMA2_00NE0000000qKY1MAM</fullName>
        <active>true</active>
        <field>Client__c.Current_Loan_Officer__c</field>
        <filterItems>
            <field>Staff__c.Branch__c</field>
            <operation>equals</operation>
            <valueField>$Source.Office__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Client_Current Loan Officer</name>
        <sourceObject>Client__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000EM2MAM_00NE0000000qKY6MAM</fullName>
        <active>true</active>
        <field>Loan_Account__c.Source_Loan_Officer__c</field>
        <filterItems>
            <field>Staff__c.Branch__c</field>
            <operation>equals</operation>
            <valueField>$Source.Branch__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Loan Account_Source Loan Officer</name>
        <sourceObject>Loan_Account__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000EM2MAM_00NE0000000qKYBMA2</fullName>
        <active>true</active>
        <field>Loan_Account__c.Current_Loan_Officer__c</field>
        <filterItems>
            <field>Staff__c.Branch__c</field>
            <operation>equals</operation>
            <valueField>$Source.Branch__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Loan Account_Current Loan Officer</name>
        <sourceObject>Loan_Account__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000WdvMAE_00NE0000000qKXmMAM</fullName>
        <active>true</active>
        <field>Center__c.Source_Loan_Officer__c</field>
        <filterItems>
            <field>Staff__c.Branch__c</field>
            <operation>equals</operation>
            <valueField>$Source.Branch__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Center_Source Loan Officer</name>
        <sourceObject>Center__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000WdvMAE_00NE0000000qKXrMAM</fullName>
        <active>true</active>
        <field>Center__c.Current_Loan_Officer__c</field>
        <filterItems>
            <field>Staff__c.Branch__c</field>
            <operation>equals</operation>
            <valueField>$Source.Branch__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Center_Current Loan Officer</name>
        <sourceObject>Center__c</sourceObject>
    </namedFilters>
    <pluralLabel>Staff</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>